# Cpp-NeuralNetwork

./: CMakeLists.txt  NatvisFile.natvis
include/: Activation.h  FileIO.h  FloatType.h  MathFunction.h  Matrix.h  NeuralNet.h  Vector.h
src/: FileIO.cpp  MathFunction.cpp  Matrix.cpp  NeuralNet.cpp  main.cpp
